Initial tips added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,286 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SHIELD - Free Bootstrap 3 Theme">
+    <meta name="author" content="Carlos Alvarez - Alvarez.is - blacktie.co">
+
+    <title> Mac Umstieg für Windows Kenner</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/styles.css"/>
+
+    <!-- Custom styles for this template -->
+    <!--<link href="https://www.prepbootstrap.com/Content/css/shield/main.css" rel="stylesheet">-->
+    <!--<link rel="stylesheet" href="https://www.prepbootstrap.com/Content/css/shield/icomoon.css">-->
+    <!--<link href="https://www.prepbootstrap.com/Content/css/shield/animate-custom.css" rel="stylesheet">-->
+
+
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet'
+          type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+
+
+    <script type="text/javascript" src="https://www.prepbootstrap.com/Content/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="https://www.prepbootstrap.com/Content/js/shield/modernizr.custom.js"></script>
+
+</head>
+
+<body data-spy="scroll" data-offset="0" data-target="#navbar-main">
+
+
+<div id="navbar-main">
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon icon-shield" style="font-size:30px; color:#3498db;"></span>
+                </button>
+                <a class="navbar-brand hidden-xs hidden-sm" href="#home"><span class="icon icon-shield"
+                                                                               style="font-size:18px; color:#3498db;"></span></a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#finder" class="smoothScroll">Finder</a></li>
+                    <li><a href="#keyboard" class="smoothScroll">Tastatur</a></li>
+                    <!--<li> <a href="#services" class="smoothScroll"> Services</a></li>-->
+                    <!--<li> <a href="#team" class="smoothScroll"> Team</a></li>-->
+                    <!--<li> <a href="#portfolio" class="smoothScroll"> Portfolio</a></li>-->
+                    <!--<li> <a href="#blog" class="smoothScroll"> Blog</a></li>-->
+                    <!--<li> <a href="#contact" class="smoothScroll"> Contact</a></li>-->
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
+
+<!-- ==== HEADERWRAP ==== -->
+<div id="headerwrap" id="home" name="home"
+     style="background:url('./images/img-mac.jpeg') no-repeat center top; background-size: cover;">
+    <header class="clearfix">
+        <h1><span class="icon icon-shield"></span></h1>
+
+        <p>Mac Umstieg für Windows-Kenner</p>
+    </header>
+</div>
+<!-- /headerwrap -->
+
+<!-- ==== ABOUT ==== -->
+<div class="container" id="finder" name="finder">
+    <div class="row white">
+        <br>
+
+        <h1 class="centered">Finder</h1>
+        <hr>
+
+        <div class="col-lg-6">
+            <p>
+                Dem Finder fehlt es leider an vielen nützlichen Funktionen, die man aus dem Explorer gewohnt ist.
+                Hier kann das Tool XtraFinder Abhilfe schaffen.
+
+                Nach der Installation erscheint das Symbol des XtraFinders in der OSX Menüleiste.
+                Unter den Einstellungen (sowie mit Hilfe von Anpassen) kann man sich gewohnte Funktionen freischalten
+                und wieder nach oben navigieren,
+                Elemente anordnen oder versteckte Dateien einblenden.
+            </p>
+
+            <p>
+                <a href="https://www.trankynam.com/xtrafinder/" class="btn btn-primary">Zur Webseite von XtraFinder</a>
+            </p>
+        </div>
+        <!-- col-lg-6 -->
+
+        <div class="col-lg-6">
+            <p>
+                Der XtraFinder schafft es leider nicht die fehlende Adresszeile auszugleichen. Das ist vorallem
+                ärgerlich, wenn man schnell zu einem Ordner navigieren möchte.
+                Dafür gibt es aber glücklicherweise die Tastenkombination Command+Shift+G.
+            </p>
+        </div>
+        <!-- col-lg-6 -->
+    </div>
+    <!-- row -->
+</div>
+<!-- container -->
+
+<!-- ==== SECTION DIVIDER1 -->
+<section class="section-divider textdivider divider1" style="background:url('./images/bg1.jpg');">
+    <div class="container">
+        <h1>PC Tastatur</h1>
+        <hr>
+        <p>Mac Tastaturen sind schön anzusehen. Doch für den Power User sind sie leider nicht gemacht. Glücklicherweise
+            kann man sich die alte PC Tastatur anschließen.</p>
+    </div>
+    <!-- container -->
+</section>
+<!-- section -->
+
+
+<!-- ==== SERVICES ==== -->
+<div class="container" id="keyboard" name="keyboard">
+    <br>
+    <br>
+
+    <div class="row">
+        <h2 class="centered">Tastatur Layout wechseln</h2>
+        <hr>
+        <br>
+
+        <div class="col-lg-offset-2 col-lg-8">
+            <p>Das Tastatur Layout auf dem Mac ist ein einziges Ärgernis, wenn man jahrelang unter Windows gearbeitet
+                hat.
+                Wer schon einmal eine E-Mail getippt hat und dann beim Eingeben der Empfänger Adresse erstaunt
+                feststellt,
+                dass sich plötzlich das E-Mail Programm schließt weiß wovon ich spreche. Es ist etwas umständlich das
+                Layout
+                auf das Windows (bzw. Linux) Format umzustellen, aber ich finde der Aufwand lohnt sich.
+            </p>
+
+            <p>
+                Im ersten Schritt lädt man eine Layout Datei herunter und kopiert sie nach <em>/Library/Keyboard
+                Layouts</em>!<br>
+
+                <a href="./files/pc_tastatur.keylayout" class="btn btn-primary" download="pc_tastatur.keylayout">
+                    Download Layout Datei </a>
+            </p>
+
+            <p>
+                Unter den Systemeinstellungen kann man die Tastatureinstellungen konfigurieren. Dort klickt man auf das
+                + zum Hinzufügen eines neuen Layouts
+                und wählt jetzt die neu hinzugekommene Option PC Tastatur unter der Kategorie Others (siehe Screenshot).
+            </p>
+
+            <p>
+                <img class="img-responsive" src="./images/screenshot_changelayout.png">
+            </p>
+
+            <div class="bs-callout bs-callout-info">
+                <h4>Zu beachten!</h4>
+                Das neue Layout ist nicht sofort aktiv. Über ein Häkchen in den Keyboard Einstellungen kann man es
+                als Eintrag in der OSX Menuzeile hinzufügen. Dort kann man via Dropdown die PC Tastatur aktivieren.
+            </div>
+
+
+            <p>
+                <img class="img-responsive" src="./images/screenshot_switchlayout.png">
+            </p>
+
+
+
+        </div>
+        <!-- col-lg -->
+    </div>
+    <!-- row -->
+
+    <div class="row">
+        <h2 class="centered">Kopieren und Enfügen (Strg+C & Strg+V)</h2>
+        <hr>
+        <br>
+        <div class="col-lg-offset-2 col-lg-8">
+
+            <p>
+                Die Kürzel für die Zwischenlage werden über die Command bzw. Apfel Taste gesteuert.
+                <em>Apfel+C</em> ist Kopieren und nicht <em>Strg+C</em> wie man es gewohnt ist.
+                Dieses Verhalten lässt sich aber sehr leicht ändern.
+            </p>
+            <p>
+                In den Keyboard Einstellungen der Systemsteuerung wählt man den Button <em>Modifier Keys</em>.
+                Dann vertauscht man einfach die Control und Command Taste.<br>
+
+                <img class="img-responsive" src="images/screenshot_copypaste.png">
+            </p>
+
+
+
+        </div><!-- col -->
+    </div>
+
+    <div class="row">
+        <h2 class="centered">Pos1, Ende und weitere Sondertasten </h2>
+        <hr>
+        <br>
+        <div class="col-lg-offset-2 col-lg-8">
+
+            <p>
+                Das PC Tastatur Layout ist leider noch nicht die finale Lösung. Denn viele Tasten haben ein anderes
+                Verhalten unter MacOSX. Die Pos1 Taste setzt z.B. den Cursor nicht an den Anfang einer Zeile,
+                sondern an den Anfang des Dokuments.
+            </p>
+            <p>
+                Man kann das ungewohnte Verhalten einzelner Tasten überschreiben. Man muss sich hierzu eine KeyBindings
+                Datei erzeugen und unter dem Pfad <em>/Library/KeyBindings</em> einfügen. Es gibt diverse Editoren
+                im Netz mit denen man diese Datei erzeugen kann.
+            </p>
+            <a class="btn btn-primary" href="files/DefaultKeyBinding.dict" download="DefaultKeyBinding.dict"> Download DefaultKeyBinding.dict</a>
+        </div><!-- col -->
+    </div>
+    <!-- row -->
+
+    <div class="row">
+        <h2 class="centered">Programme mit eigenen Tastatur Einstellungen </h2>
+        <hr>
+        <br>
+        <div class="col-lg-offset-2 col-lg-8">
+            <p>
+                Mit den oben genannten Einstellungen sollte man ein nahezu vollständiges Windows PC Verhalten herstellen.
+                Es gibt aber diverse Programme, die ihrerseits widerum eigene das Tastatur Verhalten von Mac OSX überschreiben.
+                Hierzu hilft es die Konfiguration des Programms zu untersuchen (siehe Beispiel unten).
+            </p>
+            <H3>Terminal</H3>
+            <p>
+                Im Terminal kann die Pos1 und Ende Taste über die Eisntellungen korrigieren (siehe Screenshots).
+            </p>
+
+            <div class="col-lg-4">
+                <img class="img-responsive" src="images/screenshot_terminalend.png">
+            </div>
+            <div class="col-lg-4">
+                <img class="img-responsive" src="images/screenshot_terminalhome.png">
+            </div>
+        </div>
+    </div>
+</div>
+<!-- container -->
+
+
+<!-- ==== SECTION DIVIDER2 -->
+<section class="section-divider textdivider divider2"
+         style="background:url('images/bg2.jpg');">
+    <div class="container">
+        <h1>Weitere Tips folgen in Kürze</h1>
+        <hr>
+        <p>....</p>
+    </div>
+    <!-- container -->
+</section>
+<!-- section -->
+
+
+<!-- ==== SERVICES ==== -->
+<div class="container" id="otherTip" name="otherTip">
+
+</div>
+
+
+<div id="footerwrap">
+    <div class="container">
+        &nbsp;
+    </div>
+</div>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+
+<script type="text/javascript" src="https://www.prepbootstrap.com/Content/js/shield/retina.js"></script>
+<script type="text/javascript" src="https://www.prepbootstrap.com/Content/js/shield/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="https://www.prepbootstrap.com/Content/js/shield/smoothscroll.js"></script>
+<script type="text/javascript" src="https://www.prepbootstrap.com/Content/js/shield/jquery-func.js"></script>
+</body>
+</html>
