--- a/index.html
+++ b/index.html
@@ -45,14 +45,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#finder" class="smoothScroll">Finder</a></li>
                     <li><a href="#keyboard" class="smoothScroll">Tastatur</a></li>
-                    <li><a href="#filesystem" class="smoothScroll">Dateisystem</a></li>
-                    <!--<li> <a href="#services" class="smoothScroll"> Services</a></li>-->
-                    <!--<li> <a href="#team" class="smoothScroll"> Team</a></li>-->
-                    <!--<li> <a href="#portfolio" class="smoothScroll"> Portfolio</a></li>-->
-                    <!--<li> <a href="#blog" class="smoothScroll"> Blog</a></li>-->
-                    <!--<li> <a href="#contact" class="smoothScroll"> Contact</a></li>-->
                 </ul>
             </div>
             <!--/.nav-collapse -->
@@ -67,48 +60,11 @@
     <header class="clearfix">
         <h1><span class="icon icon-shield"></span></h1>
 
-        <p>Mac Umstieg für Windows-Kenner</p>
+        <p>Mac Umstieg von Windows</p>
     </header>
 </div>
 <!-- /headerwrap -->
 
-<!-- ==== ABOUT ==== -->
-<div class="container" id="finder" name="finder">
-    <div class="row white">
-        <br>
-
-        <h1 class="centered">Finder</h1>
-        <hr>
-
-        <div class="col-lg-6">
-            <p>
-                Dem Finder fehlt es leider an vielen nützlichen Funktionen, die man aus dem Explorer gewohnt ist.
-                Hier kann das Tool XtraFinder Abhilfe schaffen.
-
-                Nach der Installation erscheint das Symbol des XtraFinders in der OSX Menüleiste.
-                Unter den Einstellungen (sowie mit Hilfe von Anpassen) kann man sich gewohnte Funktionen freischalten
-                und wieder nach oben navigieren,
-                Elemente anordnen oder versteckte Dateien einblenden.
-            </p>
-
-            <p>
-                <a href="https://www.trankynam.com/xtrafinder/" class="btn btn-primary">Zur Webseite von XtraFinder</a>
-            </p>
-        </div>
-        <!-- col-lg-6 -->
-
-        <div class="col-lg-6">
-            <p>
-                Der XtraFinder schafft es leider nicht die fehlende Adresszeile auszugleichen. Das ist vorallem
-                ärgerlich, wenn man schnell zu einem Ordner navigieren möchte.
-                Dafür gibt es aber glücklicherweise die Tastenkombination Command+Shift+G.
-            </p>
-        </div>
-        <!-- col-lg-6 -->
-    </div>
-    <!-- row -->
-</div>
-<!-- container -->
 
 <!-- ==== SECTION DIVIDER1 -->
 <section class="section-divider textdivider divider1" style="background:url('./images/bg1.jpg');">
@@ -248,56 +204,6 @@
     </div>
 </div>
 <!-- container -->
-
-
-<!-- ==== SECTION DIVIDER2 -->
-<section class="section-divider textdivider divider2"
-         style="background:url('images/bg2.jpg');">
-    <div class="container" id="filesystem" name="filesystem">
-        <h1>Dateisystem</h1>
-        <hr>
-    </div>
-    <!-- container -->
-</section>
-<!-- section -->
-
-<!-- ==== SERVICES ==== -->
-<div class="container">
-    <br>
-    <br>
-
-    <div class="row">
-        <h2 class="centered">Installation von Programmen</h2>
-        <hr>
-        <br>
-        <p>
-            Mac OSX ist im Kern ein BSD Unix mit zusätzlicher Ordnerstruktur für OSX. In alter Apple Tradition hat man den Kern möglichst weit vom Endnutzer wegabstrahiert.
-            Als Endbenutzer sieht man zunächst nur das OSX System und erst beim Arbeiten mit dem Terminal fällt auf, dass sich MacOSX ähnlich wie ein Unix System verhält.
-            Im <a href="https://de.wikipedia.org/wiki/Filesystem_Hierarchy_Standard"> Unix Dateisystem Standard </a> ist die Bedeutung der Unix Ordner gut beschrieben.
-        </p>
-        <p>
-            Bei der Installation von Programmen verwende ich daher folgende Herangehensweise:
-            <ul>
-                <li>Alle grafischen OSX Programme in den globalen Programm Ordner (<em>/Applications</em>) kopieren.</li>
-                <li>Alle Programme, die man über einen schnellen Zugriff über den Finder konfigurieren möchte in den lokalen Programm Ordner (<em>/User/.../Applications></em>) kopieren</li>
-                <li>Alle sonstigen Unix Programme ohne Installer in <em>/usr/local</em> installieren</li>
-            </ul>
-        </p>
-    </div>
-</div>
-
-
-<!-- ==== SERVICES ==== -->
-<div class="container" id="otherTip" name="otherTip">
-
-</div>
-
-
-<div id="footerwrap">
-    <div class="container">
-        &nbsp;
-    </div>
-</div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
